--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
-baseurl:     ""
-url:         "http://pixyll.com"
+title:       DailyBlog
+email:       reikdas@gmail.com
+author:      Pratyush Das
+description: "Designed to keep track of productivity each day"
+baseurl:     "/DailyBlog"
+url:         "https://reikdas.github.io"
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
