Enable social media icons

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ bing_verification:
 animated:             false
 show_related_posts:   false
 show_post_footers:    false
-show_social_icons:    false
+show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
 extended_fonts: false
@@ -33,8 +33,8 @@ post_preview_image: false
 
 # Facebook Page integration
 # (for instant articles and other stuff)
-fb_page: false
-fb_page_id:
+fb_page: true
+fb_page_id: ReikDas
 
 # Disqus post comments
 # (leave blank to disable Disqus)
@@ -51,15 +51,15 @@ facebook_appid:
 facebook_comments_number: 10
 
 # Social icons
-github_username:
+github_username: reikdas
 reddit_username:
 bitbucket_username:
 stackoverflow_id:
-twitter_username:
-skype_username:
-steam_nickname:
+twitter_username: ReikDas
+skype_username: praty98
+steam_nickname: daredevildas
 google_plus_id:
-linkedin_username:
+linkedin_username: pratyush-das
 angellist_username:
 medium_id:
 bitcoin_url:
@@ -71,10 +71,10 @@ vk_id:
 # Post sharing icons
 show_sharing_icons: false
 # Change to 'true' to enable individual icons
-share_facebook: false
-share_twitter: false
+share_facebook: true
+share_twitter: true
 share_googleplus: false
-share_linkedin: false
+share_linkedin: true
 share_digg: false
 share_tumblr: false
 share_reddit: false
